<resources>
    <string name="app_name">Gescov</string>
    <string name="app_name_menu">Gescov S.L. </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_log_in">Log in</string>
    <string name="welcome">"Benvingut"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="GescovVersion">V1.0.0</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">gescov19@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuració</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_schools_administration">Administració de centres</string>
    <string name="Catalan_visualizar_aula">Visualitzar Aula</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Inici</string>
    <string name="forum_title">Mur de noticies</string>
    <string name="create_forum_entry_button">Crea publicació</string>
    <string name="create_forum_check_content">El contingut no pot ser buit.</string>
    <string name="create_forum_check_title">El títol no pot ser buit.</string>
    <string name="create_school_form_school_name">Nom del centre</string>
    <string name="create_school_form_school_code">Nom de codi</string>
    <string name="create_school_form_school_button">Crear centre</string>
    <string name="create_school_form_school_phone">Número de Telèfon</string>
    <string name="create_school_form_school_website">Pàgina WEB</string>
    <string name="create_school_form_school_address_example">nº Nom Carrer, Municipi</string>
    <string name="create_school_form_latitude">Latitud</string>
    <string name="create_school_form_longitude">Longitud</string>
    <string name="user_all_schools_title">Tots els centres</string>
    <string name="my_schools_title">Els meus centres</string>
    <string name="Catalan_create_school_form_school_name">Nom Centre</string>
    <string name="Catalan_create_school_form_school_address">Adreça Centre</string>
    <string name="Catalan_create_school_form_school_state">Estat Centre</string>
    <string name="Catalan_create_school_form_school_code">Codi Centre</string>
    <string name="Catalan_create_school_form_school_button">Crea Centre</string>
    <string name="create_school_validate_fields">Valida els camps, si us plau.</string>
    <string name="school_details_delete_school">Elimina centre</string>
    <string name="school_details_protocol_access">Protocols</string>
    <string name="school_details_users_list">Llista d´usuaris</string>
    <string name="school_details_classrooms_list">Llista Aules</string>
    <string name="school_details_request_list">Sol·licituds</string>
    <string name="school_details_join">Sol·licitar accés</string>
    <string name="school_details_confirm_delete_message">Segur que vols eliminar aquest centre?</string>
    <string name="title_school_details">Detalls del centre</string>
    <string name="school_user_list_admin">Administrador</string>
    <string name="school_user_list_creator">Creador</string>
    <string name="school_user_list_teacher">Professor</string>
    <string name="school_user_list_student">Estudiant</string>
    <string name="school_requests_title">Sol·licituds del centre</string>
    <string name="school_requests_list_item_accept">Acceptar</string>
    <string name="school_requests_list_item_reject">Rebutjar</string>
    <string name="user_school_make_admin_message_1">Vols fer a </string>
    <string name="user_school_make_admin_message_2"> administrador d´aquest centre?</string>
    <string name="user_school_unmake_admin_message_1">Vols treure a </string>
    <string name="user_school_unmake_admin_message_2"> els privilegis d´administrador d´aquest centre?</string>
    <string name="classroom_rows">Files</string>
    <string name="classroom_cols">Columnes</string>
    <string name="classroom_capacity">Places</string>
    <string name="create_classroom_form_delete">Eliminar Aula</string>
    <string name="classroom_confirm_delete_message">Segur de que vols eliminar aquesta aula?</string>
    <string name="Catalan_classroom_name">Aula</string>
    <string name="Catalan_mark_position">Marcar Posició</string>
    <string name="Catalan_confirmation_Question">Desitges marcar la teva assistencia en aquesta posició?</string>
    <string name="Catalan_table_already_assigned">La taula ja está ocupada per algú</string>
    <string name="Catalan_table_not_available">No pots seure a aquesta taula</string>
    <string name="Catalan_successful_reservation">Reserva feta amb èxit</string>
    <string name="catalan_tableStatus_Free">Lliure</string>
    <string name="create_classroom_form_name">Nom Aula</string>
    <string name="create_classroom_form_capacity">Capacitat</string>
    <string name="create_classroom_form_rows">Files</string>
    <string name="create_classroom_form_cols">Columnes</string>
    <string name="create_classroom_form_button">Crear Aula</string>
    <string name="contagionlist">Llista de Contagis</string>
    <string name="contagion_list">"Llista de contagis "</string>
    <string name="title_activity_school_classrom_list">Aules</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_contagion_list">Llista de contagis</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_hint">Benvingut</string>
    <string name="name_hint">Nom i cognom</string>
    <string name="introduce_email_hint">Correu electrònic</string>
    <string name="Password_hint">Contrasenya</string>
    <string name="sign_in_button_text">Registra\'t</string>
    <string name="sign_in_text">Iniciar sessió</string>
    <string name="server_client_id">"673967911868-q9jgm7i3ijsjn0ft3bs6avvpot02a0nl.apps.googleusercontent.com"</string>
    <string name="logout_text">Tancar sessió</string>
    <string name="logout_successful">Sessió tancada correctament</string>
    <string name="confirm_logout">Segur que vols tancar la sessió?</string>
    <string name="dailyTest">Realitza el teu Test de seguiment</string>
    <string name="firstQuestion">Tens tos seca i persistent?  </string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="secondQuestion">Tens dolor muscular?  </string>
    <string name="thirdQuestion">Has tingut una pèrdua d\'olfacte i gust de recent aparició?  </string>
    <string name="fourthQuestion">Tens sensació de falta d\'aire?  </string>
    <string name="fifthQuestion">Tens febre? (+37.7°C)  </string>
    <string name="titleTests">Quins símptomes tens? </string>
    <string name="sendAnswers">Finalitzar Test </string>
    <string name="userAnswer">Resposta de l\'usuari: </string>
    <string name="user_test_response">Respostes del test</string>
    <string name="all_tests"> Tots el tests</string>
    <string name="test_done_in">Test fet el </string>
    <string name="error_no_tests">No hi ha cap test </string>
    <string name="dail_test_title">Test de seguiment </string>
    <string name="notify_state">Notificar Estat</string>
    <string name="succesPositiveNotification">S\'ha notificat correctament el teu positiu</string>
    <string name="succesRecoveryNotification">S\'ha notificat correctament a teva recuperació </string>
    <string name="succesPossiblePositiveNotification">Se ha notificado tu posible contagio.</string>
    <string name="notify_positive">notifica el teu positiu</string>
    <string name="notify_possible">notificar com possible positiu</string>
    <string name="notify_recovery">notifica la teva recuperació</string>
    <string name="covid_notification_title">Notificació de COVID</string>
    <string name="conflict_notify_possitive">Encara no ha passat un dia des de que t\'has recuperat </string>
    <string name="already_positive">Ja ets registrat com contagiat o com possible contagiat </string>
    <string name="already_recovered">Ja ets registrat com recuperat </string>
    <string name="success_Notification">Registrat correctament </string>
    <string name="home_risk">Usuari de risc</string>
    <string name="home_not_risk">Usuari sense risc</string>
    <string name="edit">Editar</string>
    <string name="update">Actualitza</string>
    <string name="apply">Accepta</string>
    <string name="delete">Elimina</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="class_record_activity_title">Historial d\'alumnes a l\'aula</string>
    <string name="alummne_assegut_a">"Alumne assegut a la fila: "</string>
    <string name="alumne_assegut_a_columna">", columna: "</string>
    <string name="error_no_students_in_this_classroom">Encara no han passat alumnes per aquesta aula</string>
    <string name="title_activity_classroom_distribution">Distribució de la classe</string>
    <string name="chat_fragment_menu_text">Xats</string>
    <string name="your_chats_text">Els teus xats personals</string>
    <string name="options">Opcions</string>
    <string name="confirm_delete_chat_message">Segur de que vols eliminar aquest xat?</string>
    <string name="yes_delete_chat">Elimina</string>
    <string name="no_delete_chat">Cancela</string>
    <string name="title_activity_create_chat">Contactes del centre</string>
    <string name="loading_user_schools_text">Carregant informació dels teus centres</string>
    <string name="loading_afiliates_from_selected_center">Carregant contactes del centre: </string>
    <string name="creating_chat_text">Creant xat...</string>
    <string name="mapa_text">Mapa</string>
    <string name="write_message_hint">Escriu el teu missatge</string>
    <string name="ranking_name">Ranking de centres</string>
    <string name="error_chat_already_created">Ja tens un xat amb aquesta persona</string>
    <string name="no_messages_yet_text">Cap missatge enviat</string>
    <string name="share_text">El meu centre</string>
    <string name="share2_text">està a la posició</string>
    <string name="share3_text">en el rànquing de Gescov.</string>
    <string name="num_contagions_singular">contagi</string>
    <string name="num_contagions_plural">contagis</string>
    <string name="access_school_by_code_entry">escriu el teu codi aquí</string>
    <string name="access_school_by_code_title">Codi de centre</string>
    <string name="access_school_by_code_button">Solicita accés</string>
    <string name="view_graph">visualitzar gràfic</string>
    <string name="first_month">Gener</string>
    <string name="second_month">Febrer</string>
    <string name="third_month">Març</string>
    <string name="fourth_month">Abril</string>
    <string name="fifth_month">Maig</string>
    <string name="sixth_month">Juny</string>
    <string name="seventh_month">Juliol</string>
    <string name="eighth_month">Agost</string>
    <string name="show_subject">veure assignatures</string>
    <string name="role_promotion_title">Codi de promoció</string>
    <string name="role_promotion_button">promociona</string>
</resources>