<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home2"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/ContagionList"
            android:icon="@drawable/medical_mask"
            android:title="@string/contagion_list" />
        <item
            android:id="@+id/schoolAdministration"
            android:icon="@drawable/universidad"
            android:title="@string/menu_schools_administration" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout_text" />
    </group>

</menu>